# kreuzberg

./: .dockerignore  .gitattributes  .gitignore  .lychee.toml  .oxlintrc.json  .pre-commit-config.yaml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  alef.toml  biome.json  composer.json  config.m4  deny.toml  go.work  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  server.json  zensical.toml
.ai-rulez/: .generated-manifest.json
.ai-rulez/context/: crate-structure.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: benchmarks.yaml  ci-docs.yaml  ci-e2e.yaml  ci-go.yaml  ci-gpu.yaml  ci-lint.yaml  ci-mobile.yaml  ci-rust.yaml  ci-validate.yaml  profiling.yaml  publish-helm.yaml  publish-pubdev.yaml  publish.yaml
.task/languages/: csharp.yml  go.yml
.task/tools/: demo.yml  docs.yml  fixtures.yml  test-apps.yml
audit-notes/: candle-ocr-status.md  kotlin-android.md  ruby.md
cli-proxy/npm/: package.json
cli-proxy/pypi/: hatch_build.py  pyproject.toml
crates/kreuzberg-candle-ocr/: Cargo.toml
crates/kreuzberg-cli/: Cargo.toml
crates/kreuzberg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  (+1 more)
crates/kreuzberg-jni/: Cargo.toml
crates/kreuzberg-jni/src/: lib.rs
docker/: Dockerfile.cli  Dockerfile.core  Dockerfile.full  Dockerfile.musl-ffi  Dockerfile.musl-node  Dockerfile.musl-rustler
docs/: features.md  index.md  llms.txt
docs-site/: package.json
examples/: tsconfig.base.json
scripts/: install.sh  readme_config.yaml
tools/generate_test_fixtures/: README.md  pyproject.toml
tools/generate_test_fixtures/src/generate_test_fixtures/: __init__.py  __main__.py  diff_pairs.py  docx_revisions.py  gt_schema.py  odt_revisions.py  pdf_incremental.py  pptx_comments.py  security_fixtures.py  xlsx_revisions.py
tools/generate_test_fixtures/tests/: test_generation.py
(+1117 files in other folders)
