[package]
name = "kreuzberg-jni"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "kreuzberg_jni"

[dependencies]

[lints]
workspace = true
