[project]
name = "generate-test-fixtures"
version = "0.1.0"
description = "Deterministic fixture generator producing track-changes / revisions / diff / security documents with ground-truth JSON sidecars for kreuzberg integration tests."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Kreuzberg Contributors", email = "hello@kreuzberg.dev" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "python-docx>=1.1.0",
  "openpyxl>=3.1.2",
  "odfpy>=1.4.1",
  "reportlab>=4.0.0",
  "pikepdf>=8.0.0",
  "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4.0"]

[project.scripts]
generate-test-fixtures = "generate_test_fixtures.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generate_test_fixtures"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
